force-app/main/default/objects/DM_Loan_Account_Conditions__c/DM_Loan_Account_Conditions__c.object-meta.xml
<CustomObject>
    <label>DM Loan Account Conditions</label>
    <nameField>
        <label>DM Loan Account Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Loan Account Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>