force-app/main/default/objects/DM_Loan_Account_Conditions__c/fields/DM_Action__c.field-meta.xml
<CustomField>
    <fullName>DM_Action__c</fullName>
    <label>DM Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queue/Condition Request</fullName>
            </value>
            <value>
                <fullName>Customer Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>