force-app/main/default/objects/DM_Loan_Account_Conditions__c/fields/DM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>DM_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>DM External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>