force-app/main/default/objects/DM_Loan_Account_Conditions__c/fields/DM_Loan__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan__c</fullName>
    <label>DM Loan</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipName>DM_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>