force-app/main/default/objects/DM_Loan_Account_Conditions__c/fields/DM_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>DM_Reason_Code__c</fullName>
    <label>DM Reason Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>